--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,16 +22,16 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-        cache-dependency-path: server/package-lock.json
+        cache-dependency-path: backend/package-lock.json
 
     - name: Install dependencies
       run: |
-        cd server
+        cd backend
         npm ci
 
     - name: Run tests
       run: |
-        cd server
+        cd backend
         npm test
       env:
         CI: true
