--- a/frontend-next/package.json
+++ b/frontend-next/package.json
@@ -8,15 +8,15 @@
     "start": "next start"
   },
   "dependencies": {
+    "@tailwindcss/postcss": "^4.1.14",
     "next": "15.5.4",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "tailwindcss": "^4.1.14"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.14",
     "autoprefixer": "^10.4.21",
-    "daisyui": "^5.1.27",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.14"
+    "daisyui": "^5.1.29",
+    "postcss": "^8.5.6"
   }
 }
