--- a/.github/workflows/main_impactly.yml
+++ b/.github/workflows/main_impactly.yml
@@ -17,12 +17,11 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v4
+      
+      - name: Set up Node.js version
+        uses: actions/setup-node@v3
         with:
-          node-version: ${{ matrix.node-version }}
-          cache: 'npm'
-          cache-dependency-path: backend/package-lock.json
+          node-version: '22.x'
   
       - name: Install dependencies
         run: |
@@ -73,5 +72,6 @@ jobs:
           package: .
 
           
+
 
 
