--- a/.github/workflows/main_impactly.yml
+++ b/.github/workflows/main_impactly.yml
@@ -69,9 +69,10 @@ jobs:
         with:
           app-name: 'impactly'
           slot-name: 'Production'
-          package: .
+          package: backend
 
           
+
 
 
 
