--- a/.github/workflows/main_impactly.yml
+++ b/.github/workflows/main_impactly.yml
@@ -23,10 +23,11 @@ jobs:
         with:
           node-version: '20.x'
   
-      - name: Install dependencies
+      - name: Install dependencies and build
         run: |
           cd backend
           npm ci
+          npm run build --if-present
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
