--- a/.github/workflows/main_impactly.yml
+++ b/.github/workflows/main_impactly.yml
@@ -22,12 +22,12 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '20.x'
+          cache: 'npm'
+          cache-dependency-path: backend/package-lock.json
   
-      - name: Install dependencies and build
-        run: |
-          cd backend
-          npm ci
-          npm run build --if-present
+      - name: Install dependencies
+        run: npm ci
+        working-directory: backend
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
@@ -66,6 +66,7 @@ jobs:
           package: ./backend
 
           
+
 
 
 
