--- a/.github/workflows/main_impactly.yml
+++ b/.github/workflows/main_impactly.yml
@@ -7,7 +7,14 @@ on:
   push:
     branches:
       - main
-  workflow_dispatch:
+    paths:
+      - backend/**
+  pull_request:
+    types: [opened, synchronize, reopened, closed]
+    branches:
+      - main
+    paths:
+      - backend/**
 
 jobs:
   build:
@@ -66,6 +73,7 @@ jobs:
           package: ./backend
 
           
+
 
 
 
