Refactor Azure Web App deployment workflow
Updated the YAML configuration for Azure Web App deployment, ensuring the correct paths and settings are maintained.

--- a/.github/workflows/main_impactly.yml
+++ b/.github/workflows/main_impactly.yml
@@ -70,9 +70,10 @@ jobs:
         with:
           app-name: 'impactly'
           slot-name: 'Production'
-          package: ./backend
+          package: .
 
           
+
 
 
 
