--- a/.github/workflows/infra.yml
+++ b/.github/workflows/infra.yml
@@ -13,8 +13,17 @@ env:
 jobs:
   terraform:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: terraform
+        
     steps:
       - uses: actions/checkout@v4
+
+      - name: Terraform Setup
+        uses: hashicorp/setup-terraform@v3
+        with:
+          terraform_version: 1.7.0
 
       - name: Azure Login
         uses: azure/login@v2
@@ -22,23 +31,19 @@ jobs:
           client-id: ${{ env.ARM_CLIENT_ID }}
           tenant-id: ${{ env.ARM_TENANT_ID }}
           subscription-id: ${{ env.ARM_SUBSCRIPTION_ID }}
-
-      - name: Terraform Setup
-        uses: hashicorp/setup-terraform@v3
-        with:
-          terraform_version: 1.7.0
+          allow-no-subscriptions: true
 
       - name: Terraform Initialize
-        working-directory: terraform
         run: terraform init
 
+      - name: Terraform Validate
+        run: terraform validate
+
       - name: Terraform Plan
-        working-directory: terraform
-        run: terraform plan
+        run: terraform plan -out=tfplan
 
       - name: Terraform Apply
-        working-directory: terraform
-        run: terraform apply -auto-approve
+        run: terraform apply -auto-approve tfplan
 
       # - name: Terraform Outputs
       #   working-directory: terraform
@@ -46,6 +51,7 @@ jobs:
       #   run: |
       #     echo "BACKEND_URL=$(terraform output -raw backend_url)" >> $GITHUB_ENV
       #     echo "FRONTEND_TOKEN=$(terraform output -raw frontend_token)" >> $GITHUB_ENV
+
 
 
 
