--- a/.github/workflows/infra.yml
+++ b/.github/workflows/infra.yml
@@ -3,7 +3,11 @@ name: Terraform Deploy
 on:
   push:
     branches: [ main ]
-    
+
+permissions:
+  id-token: write
+  contents: read
+
 env:
   ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
   ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
@@ -31,7 +35,7 @@ jobs:
           client-id: ${{ env.ARM_CLIENT_ID }}
           tenant-id: ${{ env.ARM_TENANT_ID }}
           subscription-id: ${{ env.ARM_SUBSCRIPTION_ID }}
-          allow-no-subscriptions: true
+          auth-type: "OIDC"
 
       - name: Terraform Initialize
         run: terraform init
@@ -51,6 +55,7 @@ jobs:
       #   run: |
       #     echo "BACKEND_URL=$(terraform output -raw backend_url)" >> $GITHUB_ENV
       #     echo "FRONTEND_TOKEN=$(terraform output -raw frontend_token)" >> $GITHUB_ENV
+
 
 
 
