--- a/.github/workflows/infra.yml
+++ b/.github/workflows/infra.yml
@@ -46,11 +46,11 @@ jobs:
         run: terraform validate -no-color
 
       - name: Terraform Plan
-        run: terraform plan -no-color -input=false
+        run: terraform plan -no-color -out=tfplan
         continue-on-error: true
 
       - name: Terraform Apply
-        run: terraform apply -auto-approve -input=false
+        run: terraform apply -auto-approve tfplan
 
       # - name: Terraform Outputs
       #   working-directory: terraform
