--- a/.github/workflows/backend-prod.yml
+++ b/.github/workflows/backend-prod.yml
@@ -6,6 +6,10 @@ on:
     paths:
       - backend/**
 
+permissions:
+  id-token: write
+  contents: read
+
 env:
   NODE_VERSION: '20.x'
   ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
@@ -16,9 +20,9 @@ env:
 jobs:
   build:
     runs-on: ubuntu-latest
-    permissions:
-      id-token: write
-      contents: read
+    defaults:
+      run:
+        working-directory: backend
 
     steps:
       - uses: actions/checkout@v4
@@ -32,7 +36,6 @@ jobs:
 
       - name: Install Dependencies
         run: npm ci
-        working-directory: backend
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
